--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -14,7 +14,8 @@
   
 .product-card
   +transition(opacity 2s cubic-bezier(.25,.1,.25,1))
-  margin-bottom: 112px
+  height: 100vh
+  margin-bottom: 25%
   max-width: 53%
   position: relative
   width: 100%
@@ -27,24 +28,23 @@
     font-size: 64px
   
   .product-info
-    +transition(opacity 2s cubic-bezier(.25,.1,.25,1))
-    position: absolute
-    opacity: 0
-    top: 50%
+    +transform(translateX(-50%) translateY(-50%))
+    +transition(all .5s cubic-bezier(.25,.1,.25,1))
     left: 50%
+    max-width: 50%
+    opacity: 0
+    position: fixed
     text-align: center
-    +transform(translateY(-50%) translateX(50%))
+    top: 50%
+    visibility: hidden
+    width: 100%
   
   &:nth-child(odd)
     margin-left: auto
     
-    .product-info
-      left: auto
-      right: 50%
-      +transform(translateY(-50%) translateX(-50%))
-      
-  &.visible .product-info
-    opacity: 1
+.show-product-title .product-info
+  opacity: 1
+  visibility: visible
   
 .product-link
   display: block
