--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -117,7 +117,10 @@ header
     &.hidden
       opacity: 0
       visibility: hidden
-      
+
+.store-logo
+  max-height: 120px
+        
 @keyframes growUp
   0%
     +transform(scale(1))
