--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -97,14 +97,6 @@
     
   &:hover
     background: transparent
-  
-  &.next
-    cursor: url('/images/arrow-right.png') 46 16, auto !important
-    right: 0
-    
-  &.previous
-    cursor: url('/images/arrow-left.png') 0 16, auto !important
-    left: 0
     
 .touch-device .multiple-product-images .flickity-prev-next-button
   opacity: 0
@@ -113,6 +105,10 @@
 .product-description
   font-size: 24px
   line-height: 40px
+  
+  @media screen and (max-width: $break-small)
+    font-size: 18px
+    line-height: 32px
   
   a
     text-decoration: underline
@@ -132,7 +128,7 @@
 .product-quantity
   display: none
 
-.add-to-cart-button
+.product-page-button
   display: none
   
   @media screen and (max-width: $break-medium) and (orientation: portrait)
@@ -147,14 +143,16 @@
     width: 100%
     border-radius: 0
     
-.touch-device .add-to-cart-button
+.touch-device .product-page-button
   display: block
   z-index: 98
   position: fixed
+  height: 120px
+  font-size: 16px
   left: auto
-  width: 200px
-  bottom: 20px
-  right: 20px
+  width: 120px
+  bottom: 50px
+  right: 50px
   border-radius: 50%
 
   @media screen and (max-width: $break-large) and (orientation: portrait)
@@ -177,10 +175,6 @@
   font-size: 24px
   line-height: 32px
   text-align: center
-  
-.mobile-product-description
-  font-size: 18px
-  line-height: 32px
   
 @media screen and (max-width: $break-medium) and (orientation: portrait)
   #product .main
