--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -3,10 +3,8 @@
 $background-color: #{"{{ theme.background_color }}"}
 $text-color: #{"{{ theme.text_color }}"}
 
-
 $product-page-background-color: #{"{{ theme.text_color }}"}
 $product-page-text-color: #{"{{ theme.text_color }}"}
-
 
 $button-background-color: #{"{{ theme.button_background_color }}"}
 $button-text-color: #{"{{ theme.button_text_color }}"}
@@ -14,10 +12,10 @@ $button-text-color: #{"{{ theme.button_text_color }}"}
 $error-text: #{"{{ theme.error_text_color }}"}
 
 $primary-font: #{"{{ theme.primary_font | font_family }}"}
-
+$secondary-font: #{"{{ theme.secondary_font | font_family }}"}
 
 $break-large: 1200px
-$break-medium: 1280px
+$break-medium: 1023px
 $break-small: 767px
 $break-extra-small: 640px
 
