--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -1,5 +1,10 @@
 @import 'variables'
 
+#cart
+  > header
+    .secondary-header, .primary-header
+      display: none
+
 .cart-holder
   background-color: inherit
   height: auto
