--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -22,6 +22,10 @@ body
   margin: 0
   padding: 0
   width: 100%
+  
+  &#product
+    background-color: $product-page-background-color
+    color: $product-page-text-color
 
   &.overlay-open
     overflow: hidden
@@ -313,10 +317,12 @@ header
       font-size: 16px
       opacity: 1
 
+.arrow
+  display: none
+  
 .show-cursor .arrow
   height: 60px
   width: 60px
-  background:red
   z-index: 1000
   pointer-events: none
   display: none
@@ -326,11 +332,7 @@ header
     fill: $button-background-color
     height: 60px
     width: 60px
-    
-  &.next
-  
-  &.previous
-  
+
 .dark-overlay
   +transition(all .5s cubic-bezier(.25,.1,.25,1))
   background-color: rgba(0,0,0,.5)
