Add correct product page variables

--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -3,8 +3,8 @@
 $background-color: #{"{{ theme.background_color }}"}
 $text-color: #{"{{ theme.text_color }}"}
 
-$product-page-background-color: #{"{{ theme.text_color }}"}
-$product-page-text-color: #{"{{ theme.text_color }}"}
+$product-page-background-color: #{"{{ theme.product_page_background_color }}"}
+$product-page-text-color: #{"{{ theme.product_page_text_color }}"}
 
 $button-background-color: #{"{{ theme.button_background_color }}"}
 $button-text-color: #{"{{ theme.button_text_color }}"}
