Fix cart content position

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -8,6 +8,7 @@
 .cart-holder
   background-color: inherit
   height: auto
+  left: 0
   max-height: 100vh
   overflow-y: auto
   padding: 0 7vw 120px
