--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -508,6 +508,7 @@ header
   border-radius: 0
   color: $button-text-color
   display: inline-block
+  font-family: $primary-font
   font-size: 16px
   height: 60px
   line-height: 60px
