--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -124,6 +124,7 @@
   @media screen and (max-width: $break-small)
     font-size: 18px
     line-height: 32px
+    margin-top: 60px
     padding-bottom: 64px
     position: relative
     top: auto
