--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -23,6 +23,7 @@
   overflow-y: auto
   padding: 0 7vw 64px
   position: fixed
+  top: 0
   width: 100%
   z-index: 200
   
@@ -99,6 +100,7 @@
   
   &.remove-qty
     margin-left: 30px
+    text-align: right
     
     @media screen and (max-width: $break-small)
       +flex-basis(20%)
