use smaller max height for logo on mobile

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -166,6 +166,9 @@ header
   
 .store-logo
   max-height: 120px
+  
+  @media screen and (max-width: $break-small)
+    max-height: 80px
         
 @keyframes growUp
   0%
