adjust custom page title sizing

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -292,8 +292,10 @@ header
   
   @media screen and (max-width: $break-medium)
     display: block
-    font-size: 24px
     margin-bottom: 40px
+  
+  @media screen and (max-width: $break-small)
+    font-size: 24px
     
 .custom-page-content
   +flex(1 1 800px)
