fix top margin issues

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -261,9 +261,13 @@ header
     
 .main
   margin: 0 auto
+  margin-top: 200px
   padding: 50px 7vw
   position: relative
   width: 100%
+  
+  @media screen and (max-width: $break-medium)
+    margin-top: 150px
   
 .page-nav-menu
   flex: 1 0 200px
