--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -178,6 +178,9 @@
   padding: 0 7vw
   text-align: center
   
+  @media screen and (max-width: $break-medium) and (orientation: portrait)
+    display: block
+  
 .mobile-product-title
   font-size: 24px
   line-height: 32px
@@ -186,12 +189,10 @@
 .mobile-product-subtitle
   font-size: 16px
   margin-top: 20px
+
+#product .main
+  margin-top: 0
   
-@media screen and (max-width: $break-medium) and (orientation: portrait)
-  #product .main
+  @media screen and (max-width: $break-medium) and (orientation: portrait)
     padding: 0
-    
-  .show-mobile-portrait
-    display: block
-    
     
