--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -21,7 +21,7 @@
   left: 0
   max-height: 100vh
   overflow-y: auto
-  padding: 0 7vw 64px
+  padding: 0 50px 64px
   position: fixed
   top: 0
   width: 100%
@@ -29,6 +29,9 @@
   
   @media screen and (max-width: $break-medium) and (orientation: portrait)
     height: 100vh
+    
+  @media screen and (max-width: $break-small)
+    padding: 0 20px 32px
   
   header
     padding: 0
